[package]
name = "swf-headers"
version = "0.1.1"
authors = ["iirelu <totallymyrealemail@hush.ai>"]
description = "A library for parsing the headers of a swf file."
documentation = "https://iirelu.github.io/swf-headers/swf_headers/"
homepage = "https://github.com/iirelu/swf-headers"
repository = "https://github.com/iirelu/swf-headers"
readme = "README.md"
keywords = ["swf", "parse", "headers"]
license = "MIT"

[dependencies]
byteorder = "0.3.11"
flate2 = "0.2.7"
lzma = "0.2.1"
